# kube_switch

./: Cargo.toml  README.md  mise.toml
src/: cli.rs  config.rs  handlers.rs  main.rs  ui.rs
